--- a/src/AppShell.xaml
+++ b/src/AppShell.xaml
@@ -7,24 +7,8 @@
     FlyoutBehavior="Locked"
     Title="UnlockingFlyout">
 
-    <!--<FlyoutItem Title="Home">
-        <ShellContent ContentTemplate="{DataTemplate local:MainPage}"/>
-    </FlyoutItem>-->
-
-    <Shell.ItemTemplate>
-        <DataTemplate>
-            <Grid ColumnDefinitions="auto" RowDefinitions="68">
-                <Image 
-                    Source="{Binding FlyoutIcon}"
-					VerticalOptions="Center"
-					HorizontalOptions="Center"                               
-					HeightRequest="38"
-					WidthRequest="38"/>
-            </Grid>
-        </DataTemplate>
-    </Shell.ItemTemplate>
-
-    <FlyoutItem Title="Home" Style="{StaticResource HomeFlyout}">
+    <FlyoutItem Title="Home">
         <ShellContent ContentTemplate="{DataTemplate local:MainPage}"/>
     </FlyoutItem>
+
 </Shell>
