--- a/src/AppShell.xaml
+++ b/src/AppShell.xaml
@@ -7,25 +7,7 @@
     FlyoutBehavior="Locked"
     Title="UnlockingFlyout">
 
-    <Shell.ItemTemplate>
-        <DataTemplate>
-            <Grid ColumnDefinitions="60,0.8*" RowDefinitions="68">
-                <Image 
-                    Grid.Column="0"
-                    Source="{Binding FlyoutIcon}"
-					VerticalOptions="Center"
-					HorizontalOptions="Center"                               
-					HeightRequest="38"
-					WidthRequest="38"/>
-                <Label
-                    Grid.Column="1"
-                    Text="{Binding Title}"
-                    VerticalTextAlignment="Center" />
-            </Grid>
-        </DataTemplate>
-    </Shell.ItemTemplate>
-
-    <FlyoutItem Title="Home" FlyoutIcon="dotnet_bot.png">
+    <FlyoutItem Title="Home">
         <ShellContent ContentTemplate="{DataTemplate local:MainPage}"/>
     </FlyoutItem>
 
